--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+bunsen-configs-pulse (10.0-1) lithium; urgency=medium
+
+  * Migrate to Lithium repository.
+  * Upgrade standards version to 4.3.0, debhelper to 10.
+  * Update copyright year.
+  * debian/rules: Remove buildflags and comments.
+
+ -- John Crawley <john@bunsenlabs.org>  Fri, 04 Jan 2019 16:20:15 +0900
+
 bunsen-configs-pulse (9.1-1) helium; urgency=medium
 
   * Remove redundant /etc/asound.conf (handled by pulseaudio).
